@startuml

title __THREADS's Class Diagram__\n

  package com.android.navada.donit {
    package com.android.navada.donit.threads {
      class GetOrganizationList {
          - spinner : Spinner
          - progressDialog : ProgressDialog
          - childEventListener : ChildEventListener
          - readOrgCount : long
          - orgCount : long
          - query : Query
          - orgList : List<CharSequence>
          + GetOrganizationList()
          + run()
          - buildSpinner()
          - removeListener()
          - makeToast()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.threads {
      class GetUserData {
          - mProgressDialog : ProgressDialog
          + done : boolean
          + GetUserData()
          + run()
          - makeToast()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.threads {
      class SignInThread {
          - email : String
          - password : String
          - mAuth : FirebaseAuth
          + SignInThread()
          + run()
          - makeToast()
      }
    }
  }
  

  GetOrganizationList o-- DonorSignUpActivity : activity
  GetUserData o-- MainActivity : activity
  SignInThread o-- SignInActivity : activity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
